# TerminalTrade

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  Procfile  main.py  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  setup.ps1  setup.sh  wrangler.toml
.agents/memory/: MEMORY.md  api-client-imports.md  chart-rsi-panel-sync.md  chart-time-sync-disposal.md  coinbase-public-apis.md  lightweight-charts-v5.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/trading-app/: .env  .env.example  index.html  package.json  vite.config.ts
artifacts/trading-app/.replit-artifact/: artifact.toml
artifacts/trading-app/src/: App.tsx  index.css  main.tsx
artifacts/trading-app/src/components/: ChartWidget.tsx  LoginGate.tsx  Sidebar.tsx  TopBar.tsx
attached_assets/: Pasted-Build-a-full-stack-trading-desktop-web-app-similar-to-a_1782302537128.txt  Pasted-Candle-intervals-Intervals-must-be-fully-customizable-D_1782302543570.txt
backend/: FASTAPI_CLOUD.md  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/exchanges/: base.py  binance.py  coinbase.py
backend/app/indicators/: divergence.py  moving_averages.py  rsi.py  stoch_rsi.py
backend/app/models/: candle.py  indicator.py
backend/app/routes/: candles.py  health.py  indicators.py  websocket.py
backend/app/services/: candle_cache.py  exchange_manager.py  indicator_service.py
backend/app/tests/: test_candles.py  test_rsi.py
lib/api-spec/: openapi.yaml
scripts/: start-backend.mjs
(+6 files in other folders)
