[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]
