[project]
name = "trade-terminal-backend"
version = "0.1.0"
description = "Trading terminal FastAPI backend"
requires-python = "==3.11.*"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "numpy>=2.0.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1"
]

[tool.fastapi]
entrypoint = "app.main:app"